市集消費抽獎序號 - 修改調整破版問題

--- a/iiot/TPUF-2023/html-collect/css/style.scss
+++ b/iiot/TPUF-2023/html-collect/css/style.scss
@@ -116,7 +116,13 @@
   }
 }
 .bg_blue_img{
-  background: url(../images/bg_blue.png) center bottom no-repeat;
+  background: url(../images/bg_blue_a.png) center bottom no-repeat;
+}
+.bg_color_blue{
+  background-color: #005ca0;
+  .middle-container{
+    padding: 0 20px;
+  }
 }
 .login_box{
     padding: 50px;
