--- a/iiot/TPUF-2023/html-collect/css/style.css
+++ b/iiot/TPUF-2023/html-collect/css/style.css
@@ -339,7 +339,15 @@ body {
 }
 
 .bg_blue_img {
-  background: url(../images/bg_blue.png) center bottom no-repeat;
+  background: url(../images/bg_blue_a.png) center bottom no-repeat;
+}
+
+.bg_color_blue {
+  background-color: #005ca0;
+}
+
+.bg_color_blue .middle-container {
+  padding: 0 20px;
 }
 
 .login_box {
