--- a/CTBC-0716/css/style.css
+++ b/CTBC-0716/css/style.css
@@ -37,9 +37,10 @@ main.wrapper{ width: 100%; padding: 15px; }
 .wrapper .pay_item .pay_list li a{display: block; width: 200px; height: 104px; overflow: hidden; border: 2.5px solid #D0D1D1; border-radius: 6px;display: -webkit-flex; display: flex; -webkit-align-items: center; align-items: center; -webkit-justify-content: center; justify-content: center;}
 .wrapper .pay_item .pay_list li a:hover{ border-color: #52a0a0; }
 .wrapper .pay_item .pay_list li a img{ max-width: 100%; }
-.wrapper .pay_item .pay_list li a.choose_pay{ border-color: #1F8989; }
+.wrapper .pay_item .pay_list li a.choose_pay{ border-color: #1F8989; background-color:#EDF6F6; }
 .wrapper .pay_item .pay_list li p{ font-size: 17px; font-weight: bold; position: relative;}
 .wrapper .pay_item .pay_list li p span{ font-size: 14px; font-weight: normal; }
+.wrapper .pay_item .pay_list li p span.ss{ font-size: 11px;  padding-top: 3px; color: #FF0000; display: inline-block; transform: scale(0.9); line-height:1.5;}
 .wrapper .pay_item .pay_list li p.banks, .wrapper .pay_item .pay_list li p.CTBC{ padding-bottom: 24px;}
 .wrapper .pay_item .pay_list li p.banks:after{ content: ""; position:absolute; width: 100%; height: 21px; bottom: -2px; left: 0; background: url(../images/cardtype_ss.png) center center no-repeat; background-size: contain; }
 .wrapper .pay_item .pay_list li p.CTBC:after{ content: ""; position:absolute; width: 100%; height: 30px; bottom: -5px; left: 0; background: url(../images/CTBC_W.jpg) center center no-repeat; background-size: contain; }
@@ -80,6 +81,7 @@ main.wrapper{ width: 100%; padding: 15px; }
 
 	.wrapper .pay_item .pay_list li p{ font-size: 14px; }
 	.wrapper .pay_item .pay_list li p span{ font-size: 12px; }
+	.wrapper .pay_item .pay_list li p span.ss{ padding-top: 0; width: 120%; margin-left: -10%; transform: scale(0.7); line-height:1.3;}
 	.wrapper .pay_item .pay_list li p.banks, .wrapper .pay_item .pay_list li p.CTBC{ padding-bottom: 16px; }
 	.wrapper .pay_item .pay_list li p.banks:after{height: 15px;}
 	.wrapper .pay_item .pay_list li p.CTBC:after{ height: 20px; }
