--- a/SFAP/SFAP-html/css/style.scss
+++ b/SFAP/SFAP-html/css/style.scss
@@ -614,3 +614,41 @@ div.date-picker-dash {
 .glyphicon-pencil {
   background: url(../images/icon/pencil.svg);
 }
+
+
+// loader
+.h_loader {
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, .7);
+  position: fixed;
+  z-index: 1002;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+
+  div {
+    text-align: center;
+  }
+
+  p {
+    font-size: 16px;
+    color: #fff;
+    padding: 5px 10px;
+  }
+
+  .loader_circle {
+    display: inline-block;
+    border: 10px solid #007B81;
+    border-radius: 50%;
+    border-top: 10px solid #4EB5A5;
+    width: 80px;
+    height: 80px;
+    -webkit-animation: spin 1.5s linear infinite;
+    /* Safari */
+    animation: spin 1.5s linear infinite;
+  }
+}
