--- a/SFAP/SFAP-html/css/style.scss
+++ b/SFAP/SFAP-html/css/style.scss
@@ -604,17 +604,22 @@ div.date-picker-dash {
   margin: 0 5px;
   font-size: 16px;
   cursor: pointer;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
   &:hover{
     opacity: .9;
   }
 }
 .glyphicon-eye {
-  background: url(../images/icon/eye.svg);
+  background-image: url(../images/icon/eye.svg);
 }
 .glyphicon-pencil {
-  background: url(../images/icon/pencil.svg);
+  background-image: url(../images/icon/pencil.svg);
 }
-
+.glyphicon-crosses{
+  background-image: url(../images/icon/crosses.svg);
+}
 
 // loader
 .h_loader {
