--- a/SFAP/SFAP-html/css/style.css
+++ b/SFAP/SFAP-html/css/style.css
@@ -346,9 +346,9 @@ td {
   display: flex;
   padding: 8px;
   font-size: 16px;
-  -webkit-box-flex: 40%;
-      -ms-flex: 40%;
-          flex: 40%;
+  -webkit-box-flex: 35%;
+      -ms-flex: 35%;
+          flex: 35%;
   max-width: 180px;
   padding-right: 6px;
   line-height: 20px;
@@ -410,7 +410,7 @@ td {
 }
 
 .form_row .rowCont .a_field .txn-input-select::after {
-  top: calc(50% - 6px);
+  top: 13px;
   right: 7px;
   content: "";
   position: absolute;
@@ -673,8 +673,8 @@ div.date-picker-dash {
   transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;
   border: 1px solid #dee2e6;
   background-color: #fff;
-  padding: 10px 12px;
-  font-size: 16px;
+  padding: 8px 10px;
+  font-size: 14px;
 }
 
 .page-link:hover {
@@ -720,6 +720,13 @@ div.date-picker-dash {
   padding: 20px 0;
 }
 
+.popup-w-s .subtitle {
+  padding-bottom: 15px;
+  font-size: 14px;
+  text-align: center;
+  color: #555;
+}
+
 .popup-w-s .ctbc-table-container {
   background-color: #fff;
   border-radius: 12px;
@@ -729,6 +736,17 @@ div.date-picker-dash {
 
 .popup-w-s .ctbc-table-container ul.c-c-list {
   padding-bottom: 10px;
+}
+
+.info-f-ss .form_row .rowCont .a_field .rowTitle {
+  -webkit-box-flex: 20%;
+      -ms-flex: 20%;
+          flex: 20%;
+  font-size: 14px;
+}
+
+.info-f-ss p {
+  font-size: 14px;
 }
 
 .bg-c01 {
@@ -1031,6 +1049,14 @@ div.date-picker-dash {
 
 .glyphicon-calendar {
   background-image: url(../images/icon/calendar.svg);
+}
+
+.glyphicon-download {
+  background-image: url(../images/icon/download.svg);
+}
+
+.glyphicon-trash {
+  background-image: url(../images/icon/trash.svg);
 }
 
 .h_loader {
