--- a/SFAP/SFAP-html/css/style.scss
+++ b/SFAP/SFAP-html/css/style.scss
@@ -158,7 +158,7 @@ td{
         display: flex;
         padding: 8px;
         font-size: 16px;
-        flex: 40%;
+        flex: 35%;
         max-width: 180px;
         padding-right: 6px;
         line-height: 20px;
@@ -203,7 +203,7 @@ td{
         // z-index: 1;
         position: relative;
         &::after{
-          top: calc(50% - 6px);
+          top:13px;
           right: 7px;
           content: "";
           position: absolute;
@@ -418,8 +418,8 @@ div.date-picker-dash {
   transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
   border: 1px solid #dee2e6;
   background-color: #fff;
-  padding:10px 12px ;
-  font-size: 16px;
+  padding:8px 10px ;
+  font-size: 14px;
   &:hover{
     background-color: #dee2e6;
   }
@@ -459,6 +459,12 @@ div.date-picker-dash {
     color: #333;
     padding: 20px 0;
   }
+  .subtitle{
+    padding-bottom: 15px;
+    font-size: 14px;
+    text-align: center;
+    color: #555;
+  }
   .ctbc-table-container{
     background-color: #fff;
     border-radius: 12px;
@@ -468,7 +474,15 @@ div.date-picker-dash {
     }
   }
 }
-
+.info-f-ss{
+  .form_row .rowCont .a_field .rowTitle{
+    flex: 20%;
+    font-size: 14px;
+  }
+  p{
+    font-size: 14px;
+  }
+}
 .bg-c01{
    background-color: #EDF6F6;
 }
@@ -733,6 +747,12 @@ div.date-picker-dash {
 }
 .glyphicon-calendar {
   background-image: url(../images/icon/calendar.svg);
+}
+.glyphicon-download {
+  background-image: url(../images/icon/download.svg);
+}
+.glyphicon-trash{
+  background-image: url(../images/icon/trash.svg);
 }
 // loader
 .h_loader {
